<resources>
    <string name="app_name">Molonómetro</string>
    <string name="action_settings">Ajustes</string>
    <string name="element_shared_dashboard_group">element_shared_dashboard_group</string>
    <string name="new_group">Nuevo grupo</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="register_activity">Inicio</string>
    <string name="invite">Invitar</string>
    <string name="adjust_activity">Ajustes</string>
    <string name="name_and_state">Nombre y estado</string>
    <string name="refresh">Actualizar</string>
    <string name="edit_field">Editar</string>
    <string name="no_groups">Todavia no estas en ningún grupo</string>
    <string name="no_contacts">No hay contactos</string>
    <string name="next">Siguiente</string>
    <string name="finish_group">Finalizar grupo</string>
    <string name="group_activity">Grupo</string>
    <string name="edit_state">Editar estado</string>
    <string name="edit_name">Editar nombre</string>
    <string name="you">Tú</string>
    <string name="participants">Participantes</string>
    <string name="added_to_group">Te han añadido al grupo</string>
    <string name="group_info">Info. del grupo</string>
    <string name="no_comments">Todavia no hay comentarios en este grupo.\n¡Se el primero en votar!</string>
    <string name="to">Para:</string>
    <string name="send">Enviar</string>
    <!--<string name="has_voted_to">&#160;<b>%1$s</b> ha votado a <b>%2$s</b>&#160;</string>-->
    <string name="has_voted_to">&#160;ha votado a&#160;</string>
    <string name="view_plies">Ver respuestas</string>
    <string name="reply">Responder</string>
    <string name="send_reply">Responder</string>
    <string name="like">Me gusta</string>
    <string name="comment">Comentar</string>
    <string name="share">Compartir</string>
    <string name="votar">Votar</string>
    <string name="no_reactions">No hay reacciones</string>
    <string name="group_detail_activity">Detalle grupo</string>
    <string name="contact_detail_activity">Detalle contacto</string>
    <string name="add_participant">Añadir participante</string>
    <string name="add_participant_activity">Añadir participante</string>
    <string name="already_in_group">Ya esta en el grupo.</string>
    <string name="sure_to_add_it">¿Deseas añadirle a %1$s?</string>
    <string name="change_name">Cambiar nombre</string>
    <string name="edit_group_name">Editar grupo</string>
    <string name="group_creation">Grupo creado</string>
    <string name="wish_exit_group">¿Quieres salir del grupo?</string>
    <string name="today">Hoy</string>
    <string name="image_transition">imageTransition</string>
    <string name="photo_detail_activity">photo_detail</string>
    <string name="image_activity">Imagen</string>
    <string name="ask_image">¿De donde quieres la foto?</string>
    <string name="camera">Camara</string>
    <string name="galery">Galería</string>
    <string name="not_send_empty">Pero no lo envies vacío animal!</string>
    <string name="vote_someone_real">Vota a alguien que exista!</string>
    <string name="common_groups">Grupos en común</string>
    <string name="image">Imagen</string>
    <string name="no_common_groups">No hay grupos en común.</string>
    <string name="arroba">\@</string>
    <string name="user_name">\@%1$s</string>
    <string name="edit_user_name">Editar nombre de usuario</string>
    <string name="friend_request">Solicitudes</string>
    <string name="register"><u>Registrate aquí</u></string>
    <string name="add_friends_activity">Solicitudes</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="add">Añadir</string>
    <string name="block">Bloquear</string>
    <string name="request_send">Solicitud enviada</string>
    <string name="pending_request">Solicitudes pendientes</string>
    <string name="request_accepted">Solicitud aceptada</string>
    <string name="today_date">Hoy %1$s</string>
    <string name="yesterday_date">Ayer %1$s</string>
</resources>
