<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bsalazar.molonometro.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="10"
        android:icon="@drawable/refresh"
        android:title="@string/refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_friend_request"
        android:actionLayout="@layout/notification_bubble"
        android:icon="@drawable/friends_white"
        android:orderInCategory="20"
        android:title="@string/friend_request"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <!--<item-->
        <!--android:id="@+id/action_dummy"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="Lanzar dummyService"-->
        <!--app:showAsAction="never" />-->
</menu>
