<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/window_to_termometer"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/comment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/user_icon" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/comment_from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/charcoal_gray"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="Borja"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/has_voted_to"
                        android:textColor="@color/charcoal_gray"
                        android:id="@+id/textView3" />

                    <TextView
                        android:id="@+id/comment_to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/charcoal_gray"
                        android:textSize="16sp"
                        android:text="Borja"
                        android:textStyle="bold" />
                </LinearLayout>


                <TextView
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Mi comentario"
                    android:textColor="@color/charcoal_gray"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reply_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4 Me gusta"
                    android:textColor="@color/gray"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="end">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3 comentarios"
                    android:textColor="@color/gray"
                    android:padding="5dp"/>
            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryLight"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reply"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/like"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:padding="10dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/view_replies"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/comment"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/share"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryLight" />
    </LinearLayout>

</LinearLayout>